tests/typechecker/should_fail/type_annotations_2.csp
f :: Set Event => Int
f = 0
